--- a/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
+++ b/JDCloud-AX6000-Baili-hanwckf/.mtwifi-cfg.config
@@ -10,7 +10,7 @@ CONFIG_PACKAGE_luci-app-oaf=y
 ## 内部插件
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-gecoosac=y
-CONFIG_PACKAGE_luci-app-dockerman=y
+#CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-passwall=n
 CONFIG_PACKAGE_luci-app-openclash=y
@@ -51,11 +51,11 @@ CONFIG_PACKAGE_sgdisk=y
 ## 在线安装alist所需依赖
 CONFIG_PACKAGE_kmod-fuse=y
 ## 在线安装docker所需依赖
-CONFIG_PACKAGE_kmod-dm=y
-CONFIG_PACKAGE_kmod-br-netfilter=y
-CONFIG_PACKAGE_kmod-ikconfig=y
-CONFIG_PACKAGE_kmod-nf-ipvs=y
-CONFIG_PACKAGE_kmod-veth=y
+#CONFIG_PACKAGE_kmod-dm=y
+#CONFIG_PACKAGE_kmod-br-netfilter=y
+#CONFIG_PACKAGE_kmod-ikconfig=y
+#CONFIG_PACKAGE_kmod-nf-ipvs=y
+#CONFIG_PACKAGE_kmod-veth=y
 ## 针对eMMC加的一些文件系统和工具
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-f2fs=y
